Update arguments passed to Java.